# OpenGLEngine

./: .gitignore  README.md
Fase 1/: generator.cpp
fase1/: CMakeLists.txt
fase1/configs/: mytest.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
fase1/engine/: engine.cpp
fase1/generator/: geometry.cpp
fase1/output/: box.3d  box_2_3.3d  cone.3d  cone_1_2_4_3.3d  ligma.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d
fase1/src/engine/: engine.cpp
fase1/src/generator/: gen  generator.cpp  geometry.cpp  geometry.h
fase1/src/tinyXML/: tinyxml2.cpp  tinyxml2.h
fase1/src/utils/: figura.cpp  figura.hpp  list.cpp  list.hpp  parser.cpp  parser.hpp  ponto.cpp
fase2/: CMakeLists.txt
fase2/configs/: sistemaSolar.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
fase2/output/: ring.3d  sphere.3d
fase2/src/engine/: engine.cpp
fase2/src/generator/: generator.cpp  geometry.cpp  geometry.h
fase2/src/tinyXML/: tinyxml2.h
fase2/src/utils/: figura.cpp  figura.hpp  list.cpp  list.hpp  parser.cpp  parser.hpp  ponto.cpp  ponto.hpp
fase2/toolkits/devil/IL/: il.h  ilu.h  ilut.h
fase2/toolkits/glew/GL/: glew.h
fase2/toolkits/glut/GL/: glut.h
fase3/: CMakeLists.txt
fase3/configs/: SolarSystem.xml  SolarSystemCam.xml  fake.xml  new_test.xml  sistemaSolar.xml  sistemaSolarMk2.xml  sphere_1_8_8.3d  test_2_1.xml  test_2_2.xml  test_2_4.xml  test_3_1.xml  test_3_2.xml
fase3/output/: bezier_10.3d  plane_2_3.3d  sphere.3d  sphere_1_8_8.3d  teapot.3d
fase3/src/engine/: engine - Copy.cpp  engine.cpp
fase3/src/generator/: generator.cpp  geometry.cpp  geometry.h
fase3/src/utils/: curve.cpp  curve.hpp  figura.cpp  parser.cpp  parser.hpp  ponto.cpp
fase4/: CMakeLists.txt
fase4/configs/: SolarSystem.xml  test_1_1.xml  test_1_3.xml  test_1_4.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_1.xml  test_3_2.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
fase4/output/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  light_cone.3d  light_teapot.3d  new_bezier.3d  new_cone.3d  new_ring.3d  new_sphere.3d  new_sphere2.3d  output.3d  plane_2_3.3d  ring.3d  sphere_1_10_10.3d  sphere_1_8_8.3d
fase4/src/engine/: engine.cpp
fase4/src/generator/: generator.cpp  geometry.cpp  geometry.h
fase4/src/utils/: bruh  curve.cpp  curve.hpp  figura.cpp  figura.hpp  list.cpp  list.hpp  parser.cpp  parser.hpp  ponto.cpp  ponto.hpp
libraries/: tinyxml2.h
output/: sphere.3d
src/: bruh  command.txt  parser.cpp
